--- a/FrontEnd/src/app/components/admin/admin.component.html
+++ b/FrontEnd/src/app/components/admin/admin.component.html
@@ -1,7 +1,12 @@
-<ul class="list-group">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-  <li class="list-group-item">A fourth item</li>
-  <li class="list-group-item">And a fifth one</li>
-</ul>
+
+  <nav class="nav">
+    <ul><img class="rounded-circle z-depth-2" src="../../../assets/logoBCP.png"
+        alt="" width="100" height="100" ></ul>
+    <ul class="list-group" style="border: white;">
+      <p class="list-group-item">{{listAgencias[0].agencia}}</p>
+      <p class="list-group-item">{{listAgencias[0].provincia}}</p>
+      <p class="list-group-item">{{listAgencias[0].direccion}}</p>
+    </ul>
+    <ul><img class="mb-4" src="../../../assets/logoBCP.png" alt="" width="100" height="100" ></ul>
+  </nav>
+
