--- a/FrontEnd/src/app/components/admin/admin.component.html
+++ b/FrontEnd/src/app/components/admin/admin.component.html
@@ -1,5 +1,5 @@
   <ol class="list-group list-group">
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -9,7 +9,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1-4.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -19,7 +19,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1-5.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -29,7 +29,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -39,7 +39,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1-4.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -49,7 +49,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -59,7 +59,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1-6.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -69,7 +69,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -79,7 +79,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1-7.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -89,7 +89,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
@@ -99,7 +99,7 @@
       </div>
       <span class="badge bg-primary rounded-pill">14</span>
     </li>
-    <li class="list-group-item d-flex justify-content-between align-items-start" routerLink="agencia" routerLinkActive="active">
+    <li class="list-group-item d-flex justify-content-between align-items-start" (click)="agenciaDetail()">
       <img class="rounded-circle z-depth-2" src="http://www.njsac.com/image/proyectos/p-bcp-1.jpg"
         alt="" width="100" height="100" >
       <div class="ms-2 me-auto">
